get enpoint for mapped terms
