# src/main/java/com/novartis/pcs/ontology/rest/json/controlledvocabulary/ControlledVocabularyDTO.java
@@ -1,6 +1,7 @@
 package com.novartis.pcs.ontology.rest.json.controlledvocabulary;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.novartis.pcs.ontology.entity.ControlledVocabulary;
 import lombok.Data;
 
 import java.util.List;
@@ -16,5 +17,17 @@ public class ControlledVocabularyDTO {
     private String context;
     private DomainDTO domain;
     private List<TermDTO> terms;
+    private List<TermDTO> mappedTerms;
+    private List<TermDTO> unmappedTerms;
+
+    private ControlledVocabularyDTO(String name, String referenceId) {
+        this.name = name;
+        this.referenceId = referenceId;
+    }
+
+
+    public static ControlledVocabularyDTO mapNameAndReferenceFromEntity(ControlledVocabulary entity) {
+        return new ControlledVocabularyDTO(entity.getName(), entity.getReferenceId());
+    }
 
 }
